| Summary: | ASTERISK-23721: Calls to PJSIP endpoints with video enabled result in leaked RTP ports | ||
| Reporter: | Marek Cervenka (cervajs) | Labels: | |
| Date Opened: | 2014-05-06 04:37:49 | Date Closed: | 2014-05-28 11:55:45 |
| Priority: | Critical | Regression? | |
| Status: | Closed/Complete | Components: | Channels/chan_pjsip Resources/res_pjsip Resources/res_rtp_asterisk |
| Versions: | SVN 12.2.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | centos6 64bit, pjproject rpm from digium | Attachments: | ( 0) pjsip.txt |
| Description: | i tried performance test with sipp (sipp -r 30 -sn uac_pcap -l 200 -m 30000)
sipp -> ast1.8 -> ast12(chan_pjsip) the problem is in the ast12 box --snip-- Oh dear... we couldn't allocate a port for RTP instance Unable to create RTP instance using RTP engine 'asterisk' [root@voip ~]# netstat -lup|grep asterisk|wc -l 9920 extensions.conf on ast12 box [from_core] exten => _X.,1,Answer() exten => _X.,n,Playback(demo-instruct) exten => _X.,n,hangup(16) rtp.conf rtpstart=10000 rtpend=20000 i can reproduce the problem i tried last SVN - branch-12-r413282 - the same problem again | ||
| Comments: | By: Matt Jordan (mjordan) 2014-05-06 10:34:18.017-0500 Please attach your {{pjsip.conf}}. By: Marek Cervenka (cervajs) 2014-05-06 12:19:38.968-0500 [Edit by Rusty - removing inline file that should have been attached to the issue. I attached a config for use in reproduction] By: Rusty Newton (rnewton) 2014-05-08 17:05:14.772-0500 Attaching pjsip.txt. Calls to the endpoint configured there will result in leaked RTP ports. The key appears to be having "allow = h264", as without that, RTP ports are not leaked. I'm not sure exactly how RTP stuff works behind the scenes, but I did also test with chan_sip peers with videosupport=yes and video codecs enabled. The problem does not occur with chan_sip. By: Richard Mudgett (rmudgett) 2014-05-27 18:24:25.304-0500 Patch up on reviewboard: https://reviewboard.asterisk.org/r/3571/ | ||